--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-unicorn": "^37.0.1",
     "jest": "^27.3.1",
     "lint-staged": "^11.2.3",
+    "nanodelay": "^2.0.2",
     "nanostores": "^0.5.0",
     "prettier": "^2.4.1",
     "simple-git-hooks": "^2.6.1",
@@ -119,9 +120,9 @@
   "size-limit": [
     {
       "import": {
-        "./index.js": "{ autodetect }"
+        "./index.js": "{ autodetect, localeFrom }"
       },
-      "limit": "156 B"
+      "limit": "291 B"
     }
   ],
   "clean-publish": {
