--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "preset": "ts-jest/presets/default-esm",
     "globals": {
       "ts-jest": {
+        "useESM": true,
         "isolatedModules": true
       }
     },
