Add process docs

--- a/package.json
+++ b/package.json
@@ -148,7 +148,9 @@
       "pluralization",
       "Internationalization",
       "JS",
-      "Weblate"
+      "Weblate",
+      "JSONs",
+      "CI"
     ]
   },
   "sharec": {
