--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,6 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: Run unit tests
-        run: node --experimental-vm-modules node_modules/.bin/jest
+        run: ./node_modules/.bin/tsm node_modules/uvu/bin.js . \\.test\\.ts$
         env:
           FORCE_COLOR: 2
