--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "svelte"
   ],
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/.bin/jest --coverage && eslint . && check-dts && size-limit && yaspeller *.md"
+    "unit": "tsm node_modules/uvu/bin.js . \\.test\\.ts$",
+    "coverage": "c8 --check-coverage --lines 100 --exclude deprecated yarn unit",
+    "test": "yarn coverage && eslint . && check-dts && size-limit"
   },
   "author": "Andrey Sitnik <andrey@sitnik.ru>",
   "license": "MIT",
@@ -33,39 +35,27 @@
     "nanostores": "^0.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
     "@logux/core": "^0.7.2",
-    "@logux/eslint-config": "^46.0.1",
-    "@logux/sharec-config": "^0.13.1",
+    "@logux/eslint-config": "^46.1.0",
     "@size-limit/preset-small-lib": "^6.0.4",
-    "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "c8": "^7.10.0",
     "check-dts": "^0.6.3",
     "clean-publish": "^3.4.2",
     "eslint": "^8.1.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^25.2.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-let": "^3.0.0",
     "eslint-plugin-promise": "^5.1.1",
-    "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^37.0.1",
-    "jest": "^27.3.1",
-    "lint-staged": "^11.2.6",
     "nanodelay": "^2.0.2",
     "nanostores": "^0.5.4",
-    "prettier": "^2.4.1",
-    "simple-git-hooks": "^2.7.0",
     "size-limit": "^6.0.4",
-    "ts-jest": "^27.0.7",
+    "tsm": "^2.1.4",
     "typescript": "^4.4.4",
-    "yaspeller": "^8.0.0"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "./node_modules/.bin/lint-staged"
+    "uvu": "^0.5.2"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -74,26 +64,6 @@
     "semi": false,
     "singleQuote": true,
     "trailingComma": "none"
-  },
-  "lint-staged": {
-    "*.md": "yaspeller",
-    "*.js": "prettier --write",
-    "*.ts": "prettier --write"
-  },
-  "jest": {
-    "preset": "ts-jest/presets/default-esm",
-    "globals": {
-      "ts-jest": {
-        "useESM": true,
-        "isolatedModules": true
-      }
-    },
-    "testEnvironment": "node",
-    "coverageThreshold": {
-      "global": {
-        "statements": 100
-      }
-    }
   },
   "eslintConfig": {
     "extends": "@logux/eslint-config/esm",
@@ -131,31 +101,5 @@
   ],
   "clean-publish": {
     "cleanDocs": true
-  },
-  "yaspeller": {
-    "lang": "en",
-    "ignoreCapitalization": true,
-    "ignoreText": [
-      " \\(by [^)]+\\).",
-      "\\d+\\.\\d+ “[^”]+”"
-    ],
-    "dictionary": [
-      "Versioning",
-      "I18n",
-      "gzipped",
-      "Preact",
-      "Vue",
-      "pluralization",
-      "Internationalization",
-      "JS",
-      "Weblate",
-      "JSONs",
-      "CI",
-      "SSR"
-    ]
-  },
-  "sharec": {
-    "config": "@logux/sharec-config",
-    "version": "0.13.1"
   }
 }
