--- a/package.json
+++ b/package.json
@@ -93,12 +93,12 @@
     {
       "name": "Minimum",
       "import": "{ localeFrom, createI18n }",
-      "limit": "521 B"
+      "limit": "519 B"
     },
     {
       "name": "Maximum",
-      "import": "{ localeFrom, browser, createI18n, params, count, formatter, createPreprocessor }",
-      "limit": "955 B"
+      "import": "{ localeFrom, browser, createI18n, params, count, formatter, createProcessor }",
+      "limit": "951 B"
     }
   ],
   "clean-publish": {
