--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   ],
   "scripts": {
     "unit": "tsm node_modules/uvu/bin.js . '\\.test\\.(ts|js)$'",
-    "test": "c8 yarn unit && eslint . && check-dts && size-limit"
+    "test": "c8 yarn unit && eslint . && check-dts && size-limit",
+    "start": "vite demo/"
   },
   "author": "Andrey Sitnik <andrey@sitnik.ru>",
   "license": "MIT",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@logux/core": "^0.7.2",
     "@logux/eslint-config": "^46.1.1",
+    "@nanostores/persistent": "^0.5.1",
     "@size-limit/preset-small-lib": "^7.0.5",
     "@types/node": "^17.0.14",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
@@ -54,7 +56,8 @@
     "size-limit": "^7.0.5",
     "tsm": "^2.2.1",
     "typescript": "^4.5.5",
-    "uvu": "^0.5.3"
+    "uvu": "^0.5.3",
+    "vite": "^2.7.13"
   },
   "prettier": {
     "arrowParens": "avoid",
