--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-prefer-let": "^3.0.1",
     "eslint-plugin-promise": "^6.0.0",
     "nanodelay": "^2.0.2",
+    "nanospy": "^0.5.0",
     "nanostores": "^0.5.12",
     "size-limit": "^7.0.8",
     "tsm": "^2.2.1",
@@ -97,7 +98,7 @@
     {
       "name": "Minimum",
       "import": "{ localeFrom, createI18n }",
-      "limit": "673 B"
+      "limit": "674 B"
     },
     {
       "name": "Maximum",
