--- a/package.json
+++ b/package.json
@@ -38,24 +38,25 @@
     "@logux/eslint-config": "^46.1.1",
     "@nanostores/persistent": "^0.5.2",
     "@size-limit/preset-small-lib": "^7.0.8",
-    "@types/node": "^17.0.21",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
+    "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "c8": "^7.11.0",
     "check-dts": "^0.6.6",
     "clean-publish": "^4.0.0",
     "conditional-type-checks": "^1.0.5",
-    "eslint": "^8.11.0",
+    "eslint": "^8.12.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-let": "^3.0.1",
     "eslint-plugin-promise": "^6.0.0",
     "nanodelay": "^2.0.2",
+    "nanospy": "^0.5.0",
     "nanostores": "^0.5.12",
     "size-limit": "^7.0.8",
     "tsm": "^2.2.1",
-    "typescript": "^4.6.2",
+    "typescript": "^4.6.3",
     "uvu": "^0.5.3",
     "vite": "^2.8.6"
   },
@@ -97,7 +98,7 @@
     {
       "name": "Minimum",
       "import": "{ localeFrom, createI18n }",
-      "limit": "673 B"
+      "limit": "674 B"
     },
     {
       "name": "Maximum",
