--- a/package.json
+++ b/package.json
@@ -35,20 +35,20 @@
     "nanostores": "^0.5.0"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^46.1.2",
+    "@logux/eslint-config": "^47.2.0",
     "@nanostores/persistent": "^0.5.2",
     "@size-limit/preset-small-lib": "^7.0.8",
-    "@types/node": "^17.0.23",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
-    "c8": "^7.11.0",
-    "check-dts": "^0.6.6",
+    "@types/node": "^17.0.26",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "c8": "^7.11.2",
+    "check-dts": "^0.6.7",
     "clean-publish": "^4.0.0",
     "conditional-type-checks": "^1.0.5",
-    "eslint": "^8.13.0",
-    "eslint-config-standard": "^16.0.3",
+    "eslint": "^8.14.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-n": "^15.1.0",
     "eslint-plugin-prefer-let": "^3.0.1",
     "eslint-plugin-promise": "^6.0.0",
     "nanodelay": "^2.0.2",
@@ -58,7 +58,7 @@
     "tsm": "^2.2.1",
     "typescript": "^4.6.3",
     "uvu": "^0.5.3",
-    "vite": "^2.9.1"
+    "vite": "^2.9.5"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -79,16 +79,8 @@
   "eslintConfig": {
     "extends": "@logux/eslint-config/esm",
     "rules": {
-      "@typescript-eslint/unified-signatures": "off",
       "@typescript-eslint/no-explicit-any": "off",
-      "security/detect-non-literal-regexp": "off",
-      "jest/no-conditional-expect": "off",
-      "symbol-description": "off",
-      "consistent-return": "off",
-      "camelcase": "off"
-    },
-    "globals": {
-      "jsdom": false
+      "consistent-return": "off"
     }
   },
   "eslintIgnore": [
