--- a/package.json
+++ b/package.json
@@ -29,36 +29,36 @@
     "./package.json": "./package.json"
   },
   "engines": {
-    "node": "^14.0.0 || ^16.0.0 || >=18.0.0"
+    "node": "^16.0.0 || >=18.0.0"
   },
   "peerDependencies": {
     "nanostores": "^0.7.0"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^48.0.0",
-    "@nanostores/persistent": "^0.7.0",
-    "@size-limit/preset-small-lib": "^8.1.2",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "c8": "^7.12.0",
-    "check-dts": "^0.6.7",
-    "clean-publish": "^4.1.1",
+    "@logux/eslint-config": "^49.0.0",
+    "@nanostores/persistent": "^0.8.0",
+    "@size-limit/preset-small-lib": "^8.2.4",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "c8": "^7.13.0",
+    "check-dts": "^0.7.1",
+    "clean-publish": "^4.2.0",
     "conditional-type-checks": "^1.0.6",
-    "eslint": "^8.32.0",
+    "eslint": "^8.38.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prefer-let": "^3.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "nanodelay": "^2.0.2",
     "nanospy": "^0.5.0",
-    "nanostores": "^0.7.1",
-    "size-limit": "^8.1.2",
+    "nanostores": "^0.8.0",
+    "size-limit": "^8.2.4",
     "tsm": "^2.3.0",
-    "typescript": "^4.9.4",
+    "typescript": "^5.0.4",
     "uvu": "^0.5.6",
-    "vite": "^4.0.4"
+    "vite": "^4.2.1"
   },
   "prettier": {
     "arrowParens": "avoid",
