--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nanostores/i18n",
   "version": "0.9.0",
-  "description": "A tiny (≈600 bytes) i18n library for React/Preact/Vue/Svelte",
+  "description": "A tiny (≈700 bytes) i18n library for React/Preact/Vue/Svelte",
   "keywords": [
     "nano",
     "nanostores",
@@ -29,7 +29,7 @@
     "./package.json": "./package.json"
   },
   "engines": {
-    "node": "^16.0.0 || >=18.0.0"
+    "node": "^16.0.0 || ^18.0.0 || >=20.0.0"
   },
   "funding": [
     {
@@ -38,20 +38,20 @@
     }
   ],
   "peerDependencies": {
-    "nanostores": "^0.8.0"
+    "nanostores": "^0.9.0"
   },
   "devDependencies": {
     "@logux/eslint-config": "^50.0.0",
-    "@nanostores/persistent": "^0.8.0",
+    "@nanostores/persistent": "^0.9.0",
     "@size-limit/preset-small-lib": "^8.2.4",
-    "@types/node": "^20.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
+    "@types/node": "^20.2.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "c8": "^7.13.0",
     "check-dts": "^0.7.2",
     "clean-publish": "^4.2.0",
     "conditional-type-checks": "^1.0.6",
-    "eslint": "^8.40.0",
+    "eslint": "^8.41.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^16.0.0",
@@ -59,12 +59,12 @@
     "eslint-plugin-promise": "^6.1.1",
     "nanodelay": "^2.0.2",
     "nanospy": "^0.5.0",
-    "nanostores": "^0.8.1",
+    "nanostores": "^0.9.0",
     "size-limit": "^8.2.4",
     "tsm": "^2.3.0",
     "typescript": "^5.0.4",
     "uvu": "^0.5.6",
-    "vite": "^4.3.7"
+    "vite": "^4.3.8"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -96,12 +96,12 @@
     {
       "name": "Minimum",
       "import": "{ localeFrom, createI18n }",
-      "limit": "654 B"
+      "limit": "722 B"
     },
     {
       "name": "Maximum",
       "import": "{ localeFrom, browser, createI18n, params, count, formatter, createProcessor }",
-      "limit": "1088 B"
+      "limit": "1156 B"
     }
   ],
   "clean-publish": {
