--- a/package.json
+++ b/package.json
@@ -45,30 +45,30 @@
     "nanostores": "^0.9.0"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^50.0.0",
+    "@logux/eslint-config": "^51.0.0",
     "@nanostores/persistent": "^0.9.0",
-    "@size-limit/preset-small-lib": "^8.2.4",
-    "@types/node": "^20.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
-    "c8": "^7.13.0",
+    "@size-limit/preset-small-lib": "^8.2.6",
+    "@types/node": "^20.4.1",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "c8": "^8.0.0",
     "check-dts": "^0.7.2",
     "clean-publish": "^4.2.0",
     "conditional-type-checks": "^1.0.6",
-    "eslint": "^8.41.0",
-    "eslint-config-standard": "^17.0.0",
+    "eslint": "^8.44.0",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-prefer-let": "^3.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "nanodelay": "^2.0.2",
-    "nanospy": "^0.5.0",
-    "nanostores": "^0.9.0",
-    "size-limit": "^8.2.4",
+    "nanospy": "^1.0.0",
+    "nanostores": "^0.9.3",
+    "size-limit": "^8.2.6",
     "tsm": "^2.3.0",
-    "typescript": "^5.0.4",
+    "typescript": "^5.1.6",
     "uvu": "^0.5.6",
-    "vite": "^4.3.8"
+    "vite": "^4.4.2"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -90,6 +90,7 @@
     "extends": "@logux/eslint-config/esm",
     "rules": {
       "@typescript-eslint/no-explicit-any": "off",
+      "perfectionist/sort-interfaces": "off",
       "consistent-return": "off"
     }
   },
