--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "svelte"
   ],
   "scripts": {
-    "unit": "tsm node_modules/uvu/bin.js . '\\.test\\.(ts|js)$'",
     "test:lint": "eslint .",
-    "test:coverage": "c8 pnpm unit",
+    "test:coverage": "c8 pnpm bnt",
     "test:types": "check-dts",
     "test:size": "size-limit",
     "test": "pnpm run /^test:/",
@@ -51,6 +50,7 @@
     "@types/node": "^20.8.2",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "better-node-test": "^0.2.0",
     "c8": "^8.0.1",
     "check-dts": "^0.7.2",
     "clean-publish": "^4.2.0",
@@ -69,7 +69,6 @@
     "size-limit": "^9.0.0",
     "tsm": "^2.3.0",
     "typescript": "^5.2.2",
-    "uvu": "^0.5.6",
     "vite": "^4.4.10"
   },
   "prettier": {
