--- a/package.json
+++ b/package.json
@@ -44,32 +44,32 @@
     "nanostores": "^0.9.0"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^52.0.1",
-    "@nanostores/persistent": "^0.9.1",
-    "@size-limit/preset-small-lib": "^9.0.0",
-    "@types/node": "^20.8.2",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "better-node-test": "^0.2.0",
-    "c8": "^8.0.1",
+    "@logux/eslint-config": "^52.0.2",
+    "@nanostores/persistent": "^0.10.0",
+    "@size-limit/preset-small-lib": "^11.0.2",
+    "@types/node": "^20.11.19",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "better-node-test": "^0.5.0",
+    "c8": "^9.1.0",
     "check-dts": "^0.7.2",
     "clean-publish": "^4.2.0",
     "conditional-type-checks": "^1.0.6",
-    "eslint": "^8.50.0",
+    "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-node-imports": "^1.0.2",
-    "eslint-plugin-perfectionist": "^2.1.0",
+    "eslint-plugin-perfectionist": "^2.5.0",
     "eslint-plugin-prefer-let": "^3.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "nanodelay": "^2.0.2",
     "nanospy": "^1.0.0",
-    "nanostores": "^0.9.3",
-    "size-limit": "^9.0.0",
-    "tsx": "^3.13.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.10"
+    "nanostores": "^0.10.0",
+    "size-limit": "^11.0.2",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.3"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -93,7 +93,7 @@
     "clean": true
   },
   "eslintConfig": {
-    "extends": "@logux/eslint-config",
+    "extends": "@logux/eslint-config/ts",
     "rules": {
       "@typescript-eslint/no-explicit-any": "off",
       "consistent-return": "off"
@@ -106,12 +106,12 @@
     {
       "name": "Minimum",
       "import": "{ localeFrom, createI18n }",
-      "limit": "731 B"
+      "limit": "635 B"
     },
     {
       "name": "Maximum",
       "import": "{ localeFrom, browser, createI18n, params, count, formatter, createProcessor }",
-      "limit": "1179 B"
+      "limit": "1036 B"
     }
   ],
   "clean-publish": {
