--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     }
   ],
   "peerDependencies": {
-    "nanostores": "^0.9.0"
+    "nanostores": "^0.9.0 || ^0.10.0"
   },
   "devDependencies": {
     "@logux/eslint-config": "^52.0.2",
