--- a/package.json
+++ b/package.json
@@ -41,29 +41,29 @@
     }
   ],
   "peerDependencies": {
-    "nanostores": "^0.9.0 || ^0.10.0 || ^0.11.0"
+    "nanostores": "^0.9.0 || ^0.10.0 || ^0.11.0 || ^1.0.0"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^53.3.0",
+    "@logux/eslint-config": "^55.2.1",
     "@nanostores/persistent": "^0.10.2",
-    "@size-limit/preset-small-lib": "^11.1.4",
-    "@types/node": "^22.1.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "better-node-test": "^0.5.1",
-    "c8": "^10.1.2",
-    "check-dts": "^0.8.0",
-    "clean-publish": "^5.0.0",
+    "@size-limit/preset-small-lib": "^11.2.0",
+    "@types/node": "^22.14.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
+    "better-node-test": "^0.7.1",
+    "c8": "^10.1.3",
+    "check-dts": "^0.9.0",
+    "clean-publish": "^5.1.0",
     "conditional-type-checks": "^1.0.6",
-    "eslint": "^9.8.0",
-    "globals": "^15.9.0",
+    "eslint": "^9.24.0",
+    "globals": "^16.0.0",
     "nanodelay": "^2.0.2",
     "nanospy": "^1.0.0",
-    "nanostores": "^0.11.0",
-    "size-limit": "^11.1.4",
-    "tsx": "^4.16.5",
-    "typescript": "^5.5.4",
-    "vite": "^5.3.5"
+    "nanostores": "^1.0.1",
+    "size-limit": "^11.2.0",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3",
+    "vite": "^6.2.6"
   },
   "prettier": {
     "arrowParens": "avoid",
